--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,68 +1,68 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+:root{
+  background-color: #f9f9f9;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+
+  font-family: "Poppins", sans-serif;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.slick-slide > div {
+  margin: 0 10px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); 
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.grid-item {
+  border: 0;
+}
+
+.grid-container2 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); 
+}
+
+.grid-item21 {
+  border: 0;
+}
+
+.grid-item22 {
+  border: 0;
+}
+
+@media (max-width: 1200px) {
+  .grid-item {
+    grid-column: span 2;
   }
-  a:hover {
-    color: #747bff;
+  .grid-item21 {
+    grid-column: span 3;
   }
-  button {
-    background-color: #f9f9f9;
+  .grid-item22 {
+    grid-column: span 3;
+  }
+}
+
+@media (min-width: 1201px) {
+  .grid-item {
+    grid-column: span 1;
+  }
+  .grid-item21 {
+    grid-column: span 2;
+  }
+  .grid-item22 {
+    grid-column: span 1;
+  }
+}
+
+@media (max-width: 719px) {
+  .grid-item {
+    grid-column: span 4; 
   }
 }
